--- a/_data/owner.yml
+++ b/_data/owner.yml
@@ -49,4 +49,4 @@ google_analytics_id: ""
 # there are different ways to verify web page. One is adding this as meta into html.
 # make sure you set meta.google_site_verify: true in _data/conf/main.yml
 # make sure your environment does not match with google.site_verification.ignore in _data/conf/main.yml
-google_site_verification: ""
+google_site_verification: "ovLmEyG3RVcWQBXYeT9jGJka2D-sjRawRTOyGMO6dh4"
