--- a/_data/conf/main.yml
+++ b/_data/conf/main.yml
@@ -286,7 +286,7 @@ google:
     ignore: development
   site_verification:
     # disable this feature entirely for development or production env.
-    ignore: development
+    # # #  # MODMODMODMODignore: development
 
 ###########################################################
 #                Cookie consent
