--- a/_data/owner.yml
+++ b/_data/owner.yml
@@ -30,7 +30,7 @@ creative_commons:
 # comment to remove any contact item
 contacts:
   #- github: "https://github.com/passionleader"
-  #- email: "kss0097@gmail.com"
+  #- email: "sungsu1624@gmail.com"
   #- linkedin: ""
   #- twitter: ""
   #- instagram: ""
